marked 1.2.6  7 December 2019
-----------------
BUG FIXES

* more changes to FORTRAN files to avoid warnings.

* process.data will now change any data.table to a data.frame. Caused issues with second vignette in RWildbook.


marked 1.2.5  6 December 2019
-----------------
BUG FIXES

* more changes to FORTRAN files to avoid warnings on use of multiple DO's to a single continue and tabs. 


marked 1.2.4  5 December 2019
-----------------
BUG FIXES

* changes to FORTRAN files to avoid warnings on use of multiple DO's to a single continue and tabs. 

* changes to use is() function instead of class which can always return more than one value which can cause problems.


marked 1.2.3  29 November 2019
-----------------
BUG FIXES

* Fixed lit cited in vignette to remove DOI and URLs which were causing issues on CRAN. Problem with optimx on Debian Linux remains until optimx is patched.

marked 1.2.2  27 November 2019
-----------------
NEW
* added TMB version of mvmscjs in mvmscjs_tmb R code and mvmscjs_tmb.cpp code. It is an order of magnitude faster than ADMB code for the sealion example. For this model, the default method is nlminb for optimization because it performs better in general.  Setting method can over-ride the default.

* added model MSLD for multistate live recapture and dead recovery in TMB.

* added simulated annealing method (SANN) with optim for MSLD, MSCJS and MVMSCJS models. Note that this method does not implement a convergence criterion and simply runs until itnmax iterations are completed. You can get a report of iteration results using control=list(trace=1). You can also set the temp with control.  See ?optim for complete help on SANN.

BUG FIXES

* In mvmscjs the parameters were not in the correct order so the admb code did not work with the sealions example because the hessian was not in the expected order.  Thanks to Jaume Forcada for reporting the problem.
